--- a/.gitignore
+++ b/.gitignore
@@ -57,6 +57,9 @@ fs_brokers/apache_hdfs_broker/src/main/thrift/
 regression-test/framework/dependency-reduced-pom.xml
 regression-test/realdata/*
 
+regression-test/cacheData/*
+regression-test/conf/regression-conf-custom.groovy
+
 samples/doris-demo/remote-udf-python-demo/*_pb2.py
 samples/doris-demo/remote-udf-python-demo/*_pb2_grpc.py
 samples/doris-demo/remote-udf-cpp-demo/*.o
