[fix](regression case) fix test_delete_sign / test_compress_json / StageTest (#1176)

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,8 @@ samples/doris-demo/remote-udf-cpp-demo/*.pb.h
 samples/doris-demo/remote-udf-cpp-demo/*.pb.cc
 samples/doris-demo/remote-udf-cpp-demo/function_server_demo
 
+!regression-test/data/cloud/copy_into/test_compress_json.json.gz
+
 # FE
 fe/mocked/
 fe/fe-core/gen/
