Pick jsonb functions from doris 13129 13366 13379 13792 13778 14619 14626 14686 14168 (#1195)
commit 72d065963413acf6553030646e08d31e92a1e2f8
Author: Kang <kxiao.tiger@gmail.com>
Date:   Thu Dec 1 09:53:57 2022 +0800

    change jsonb cast case

commit df79145895995fca3ddefb896d9a0fbd62dec6de
Author: starocean999 <40539150+starocean999@users.noreply.github.com>
Date:   Fri Nov 11 11:27:51 2022 +0800

    [fix](cast)fix cast to char(N) error (#14168)

commit e6514c1bbc7e7ff5ac8acb4e712d93a4866779b8
Author: Kang <kxiao.tiger@gmail.com>
Date:   Wed Nov 30 14:00:50 2022 +0800

    [bug](jsonb) fix be core at insert invalid json to JSONB column (#14686)

commit 1dde525cd09355f72d1ec20a0a58125df3541914
Author: Kang <kxiao.tiger@gmail.com>
Date:   Wed Nov 30 09:53:16 2022 +0800

    [bug](jsonb) fix INSERT/CAST NULL to JSONB (#14682)

    Add NULL -> JSONB in implicitCastMap to support INSERT/CAST NULL to JSONB.

commit 7fc7588cca41759ee5b77e6785218d2b85bea125
Author: Kang <kxiao.tiger@gmail.com>
Date:   Tue Nov 29 16:22:22 2022 +0800

    [fix](jsonb)fix CAST String to JSONB nullable problem (#14626)

    fix CAST String to SONB nullable problem in DEBUG mode.

commit e36ebae4bdcae4c7de2dc7e8907cf2014ebdd6b3
Author: Kang <kxiao.tiger@gmail.com>
Date:   Mon Nov 28 11:36:54 2022 +0800

    [feature](jsonb function)change jsonb_extract_string behavior and doc (#14619)

    1. change jsonb_extract_string behavior: convert to string instead of NULL if the type of json path is not string
    2. move jsonb tutorial doc to JSONB data type

commit 602a8c79fd4cc1f6f1cd6e4ae4c17b45fcfce7f8
Author: Kang <kxiao.tiger@gmail.com>
Date:   Sat Nov 26 10:06:15 2022 +0800

    [feature](jsonb type)refactor JSONB type using column and add testcase (#13778)

    1. Refactor JSONB type using ColumnString instead making a copy.
    2. Add regression testcase for JSONB load and functions.

commit ae6b794a0c6e82d057afbd28f3a9fbc08c0b7b77
Author

--- a/be/src/vec/CMakeLists.txt
+++ b/be/src/vec/CMakeLists.txt
@@ -48,7 +48,6 @@ set(VEC_FILES
   columns/column_decimal.cpp
   columns/column_nullable.cpp
   columns/column_string.cpp
-  columns/column_jsonb.cpp
   columns/column_vector.cpp
   columns/columns_common.cpp
   columns/column_object.cpp
@@ -182,6 +181,7 @@ set(VEC_FILES
   functions/function_utility.cpp
   functions/comparison_equal_for_null.cpp
   functions/function_json.cpp
+  functions/function_jsonb.cpp
   functions/function_datetime_floor_ceil.cpp
   functions/functions_geo.cpp
   functions/hll_cardinality.cpp
