Implement injection points and update cloud compaction regression-tests (#1315)

--- a/be/src/http/CMakeLists.txt
+++ b/be/src/http/CMakeLists.txt
@@ -56,4 +56,5 @@ add_library(Webserver STATIC
   action/check_tablet_segment_action.cpp
   action/version_action.cpp
   action/pad_segment_action.cpp
+  action/injection_point_action.cpp
 )
